--- a/README
+++ b/README
@@ -1,4 +1,16 @@
+sigslot - C++11 Signal/Slot library
+
+Originally written by Sarah Thompson.
+
+Various patches and fixes applied by Cat Nap Games:
+
 To make this compile under Xcode 4.3 with Clang 3.0 I made some changes myself and also used some diffs published in the original project's Sourceforge forum.
 I don't remember which ones though.
 
+C++11-erization by Dave Cridland:
 
+See test.cc for some documentation and a walk-through example.
+
+This is public domain; no copyright is claimed or asserted.
+
+No warranty is implied or offered either.
